--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -39,7 +39,7 @@
     {{ partialCached "footer/footer" . }}
 
     {{ partialCached "article/components/photoswipe" . }}
-    {{ partialCached "article/components/mermaid" . }}
+    {{ partial "article/components/mermaid" . }}
 {{ end }}
 
 {{ define "right-sidebar" }}
